# ur5_pick_place

./: .gitignore  README.md  code_review.md
launch/: ur5.launch  ur5_pick_place.launch  ur5_upload.launch
robot_ws/: CMakeLists.txt  package.xml
robotiq/robotiq_description/urdf/: robotiq_85_gripper.urdf.xacro
rochu_soft_gripper_ws/: Dockerfile  README.md  docker-compose.yml  launch-followme.sh  run.sh
rochu_soft_gripper_ws/rochu_gripper_msgs/: CMakeLists.txt  package.xml
rochu_soft_gripper_ws/rochu_gripper_msgs/msg/: GripperMode.msg
rochu_soft_gripper_ws/rochu_soft_gripper/: README.md
rochu_soft_gripper_ws/rochu_soft_gripper/rochu_gripper/: package.xml  setup.cfg  setup.py
rochu_soft_gripper_ws/rochu_soft_gripper/rochu_gripper/config/: params.yaml
rochu_soft_gripper_ws/rochu_soft_gripper/rochu_gripper/launch/: example.launch.py  example.launch.xml
rochu_soft_gripper_ws/rochu_soft_gripper/rochu_gripper/rochu_gripper/: rochu_gripper_fma5_class.py  rochu_gripper_fma5_node.py  rochu_logger_debug.py
rochu_soft_gripper_ws/rochu_soft_gripper/rochu_gripper/rochu_gripper/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
rochu_soft_gripper_ws/rochu_soft_gripper/rochu_gripper/rochu_gripper/log/: latest_build
rochu_soft_gripper_ws/rochu_soft_gripper/rochu_gripper_msgs/: CMakeLists.txt  my_mapping_rules.yaml  package.xml
rochu_soft_gripper_ws/rochu_soft_gripper/rochu_gripper_msgs/msg/: GripperRequest.msg  GripperState.msg
scripts/: ur5_pick_place.py
src/robotiq/robotiq_description/launch/: display_robotiq85.launch
src/robotiq/robotiq_description/urdf/: robotiq_85_gripper.xacro
src/rochu_soft_gripper_ws/rochu_gripper_msgs/msg/: GripperState.msg
src/ur_pick_place/: CMakeLists.txt  README.md  package.xml
ur_pick_place/: CMakeLists.txt  README.md  package.xml  setup.py
ur_pick_place/config/: controller.yaml
ur_pick_place/launch/: ur10.launch  ur5.launch
ur_pick_place/scripts/: ur5_pick_place.py
ur_pick_place/scripts/ur5_pick_place/: __init__.py  send_gripper.py  ur5_pick_place.py
ur_pick_place/srv/: GetObject.srv
ur_pick_place/urdf/: _d435.urdf.xacro  ur5_cam_jlimit_robot.urdf.xacro  ur5_cam_robot.urdf.xacro
ur_pick_place/worlds/: demo.world  demo_1.world
ur_smach/: CMakeLists.txt  package.xml
ur_smach/scripts/: ur_state_machine.py
urdf/: _d435.gazebo.xacro  ur5_cam_jlimit_robot.urdf.xacro  ur5_cam_robot.urdf.xacro
worlds/: arm.world
